syntax = "proto3";

package golem.cloudservices.accountsummaryservice;

import public "golem/common/empty.proto";
import public "golem/common/account_summary.proto";
import public "golem/common/account_summary_error.proto";
import public "golem/common/token_secret.proto";

service AccountSummaryService {
  rpc GetAccountCount (GetAccountCountRequest) returns (GetAccountCountResponse);
  rpc GetAccounts (GetAccountsRequest) returns (GetAccountsResponse);
}

message GetAccountCountRequest {
  golem.common.TokenSecret tokenSecret = 1;
}

message GetAccountCountResponse {
  oneof result {
    int64 success = 1;
    golem.common.AccountSummaryError error = 2;
  }
}

message GetAccountsRequest {
  int32 skip = 1;
  int32 limit = 2;
  golem.common.TokenSecret tokenSecret = 3;
}

message GetAccountsResponse {
  oneof result {
    GetAccountsSuccessResponse success = 1;
    golem.common.AccountSummaryError error = 2;
  }
}

message GetAccountsSuccessResponse {
  repeated golem.common.AccountSummary accounts = 1;
}