syntax = "proto3";

package golem.cloudservices.accountservice;

import public "models/empty.proto";
import public "models/account.proto";
import public "models/account_id.proto";
import public "models/account_data.proto";
import public "models/account_error.proto";
import public "models/plan.proto";
import public "models/token_secret.proto";

service AccountService {
  rpc DeleteAccount (AccountDeleteRequest) returns (AccountDeleteResponse);
  rpc GetAccount (AccountGetRequest) returns (AccountGetResponse);
  rpc GetPlan (AccountGetPlanRequest) returns (AccountGetPlanResponse);
  rpc UpdateAccount (AccountUpdateRequest) returns (AccountUpdateResponse);
  rpc CreateAccount (AccountCreateRequest) returns (AccountCreateResponse);
}

message AccountDeleteRequest {
  AccountId accountId = 1;
  TokenSecret tokenSecret = 2;
}

message AccountDeleteResponse {
  oneof result {
    Empty success = 1;
    AccountError error = 2;
  }
}

message AccountGetRequest {
  AccountId accountId = 1;
  TokenSecret tokenSecret = 2;
}

message AccountGetResponse {
  oneof result {
    Account account = 1;
    AccountError error = 2;
  }
}

message AccountGetPlanRequest {
  AccountId accountId = 1;
  TokenSecret tokenSecret = 2;
}

message AccountGetPlanResponse {
  oneof result {
    Plan plan = 1;
    AccountError error = 2;
  }
}

message AccountUpdateRequest {
  AccountId accountId = 1;
  AccountData accountData = 2;
  TokenSecret tokenSecret = 3;
}

message AccountUpdateResponse {
  oneof result {
    Account account = 1;
    AccountError error = 2;
  }
}

message AccountCreateRequest {
  AccountData accountData = 1;
  TokenSecret tokenSecret = 2;
}

message AccountCreateResponse {
  oneof result {
    Account account = 1;
    AccountError error = 2;
  }
}
